<resources>
    <string name="app_name">WanAndroid</string>
    <string name="title_tab_home">头条</string>
    <string name="title_tab_video">妹纸</string>
    <string name="title_tab_me">我的</string>
    <string name="title_collection">我的收藏</string>
    <string name="title_nightmode">夜间模式</string>
    <string name="title_daymode">日间模式</string>
    <string name="title_setting">设置</string>
    <string name="title_about">关于</string>
    <string name="title_version_check">版本检测</string>
    <string name="title_website">官方网站</string>
    <string name="title_source_url">开源地址</string>

</resources>
