<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_activity_header"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:text="@string/app_name"
        android:textSize="14sp" />"

    <RelativeLayout
        android:id="@+id/rl_version_check"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_item_tab_mine"
        android:clickable="true"
        android:gravity="center_vertical"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/title_version_check"
            android:textColor="@color/color_tab_mine_item"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:src="@drawable/ic_arrow_right" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_divder" />

    <RelativeLayout
        android:id="@+id/rl_website"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/bg_item_tab_mine"
        android:clickable="true"
        android:gravity="center_vertical"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/title_website"
            android:textColor="@color/color_tab_mine_item"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:src="@drawable/ic_arrow_right" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_divder" />

    <RelativeLayout
        android:id="@+id/rl_source_url"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/bg_item_tab_mine"
        android:clickable="true"
        android:gravity="center_vertical"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/title_source_url"
            android:textColor="@color/color_tab_mine_item"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:src="@drawable/ic_arrow_right" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_divder" />


</LinearLayout>